# sql_homeworks_5

./: CMakeLists.txt
source/: main.cpp
source/control_data_base/: control_data_base.cpp  control_data_base.h
